# pharia_data_sdk

./: .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  labeler.yml  pre-commit-autoupdate.yml  release.yml
examples/: README.md  __init__.py  basic_usage.py  create_stages.py  helpers.py  search_stores_usage.py  typed_usage.py
pharia/: __init__.py  client.py  filters.py  models.py  utils.py
pharia/resources/: base.py  beta.py  connectors.py  datasets.py  documents.py  files.py  repositories.py  search_stores.py  stages.py  v1.py
pharia/tests/: test_stages.py
pharia_sdk/: __init__.py  client.py  main.py  models.py
pharia_sdk/resources/: connectors.py  datasets.py  files.py  repositories.py  stages.py
pharia_sdk/tests/: test_stages.py
tests/: conftest.py  test_create_stage.py  test_filters.py  test_integration.py
